5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4144/executions/1674_1100.log
== TEST (2019-04-25 11:01:16) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
ced = int(input("digite a cedula: "))
if (ced == 2):
	print("Animal: Tartaruga")
	elif (ced == 5):
	print("Animal: Garça")
	elif (ced == 10):
	print("Animal: Arara")
	elif (ced == 20):
	print("Animal: Mico-leão-dourado")
	elif (ced == 50):
	print("Animal: Onça-pintada")
	elif (ced == 100):
	print("Animal: Garoupa")
else:
	print("animal: invalido")
			
			

-- ERROR:
File "XXXX", line 7
    elif (ced == 5):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:01:53) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
ced = int(input("digite a cedula: "))
if (ced == 2):
	print("Animal: Tartaruga")
	elif(ced == 5):
	print("Animal: Garça")
	elif(ced == 10):
	print("Animal: Arara")
	elif(ced == 20):
	print("Animal: Mico-leão-dourado")
	elif(ced == 50):
	print("Animal: Onça-pintada")
	elif(ced == 100):
	print("Animal: Garoupa")
else:
	print("animal: invalido")
			
			

-- ERROR:
File "XXXX", line 7
    elif(ced == 5):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:02:11) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
ced = int(input("digite a cedula: "))
if (ced == 2):
	print("Animal: Tartaruga")
	elif(ced == 5):
	print("Animal: Garca")
	elif(ced == 10):
	print("Animal: Arara")
	elif(ced == 20):
	print("Animal: Mico-leão-dourado")
	elif(ced == 50):
	print("Animal: Onça-pintada")
	elif(ced == 100):
	print("Animal: Garoupa")
else:
	print("animal: invalido")
			
			

-- ERROR:
File "XXXX", line 7
    elif(ced == 5):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:02:47) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
ced = int(input("digite a cedula: "))
if (ced == 2):
	print("Animal: Tartaruga")
	elif(ced == 5):
	print("Animal: Garca")
	elif(ced == 10):
	print("Animal: Arara")
	elif(ced == 20):
	print("Animal: Mico-leao-dourado")
	elif(ced == 50):
	print("Animal: Onca-pintada")
	elif(ced == 100):
	print("Animal: Garoupa")
else:
	print("animal: invalido")
			
			

-- ERROR:
File "XXXX", line 7
    elif(ced == 5):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:03:02) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
ced = int(input("digite a cedula: "))
if (ced == 2):
	print("Animal: Tartaruga")
	elif(ced==5):
	print("Animal: Garca")
	elif(ced == 10):
	print("Animal: Arara")
	elif(ced == 20):
	print("Animal: Mico-leao-dourado")
	elif(ced == 50):
	print("Animal: Onca-pintada")
	elif(ced == 100):
	print("Animal: Garoupa")
else:
	print("animal: invalido")
			
			

-- ERROR:
File "XXXX", line 7
    elif(ced==5):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:03:29) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
ced = int(input("digite a cedula: "))
if (ced == 2):
	print("Animal: Tartaruga")
	elif(ced==5):
		print("Animal: Garca")
	elif(ced == 10):
		print("Animal: Arara")
	elif(ced == 20):
		print("Animal: Mico-leao-dourado")
	elif(ced == 50):
		print("Animal: Onca-pintada")
	elif(ced == 100):
		print("Animal: Garoupa")
else:
	print("animal: invalido")
			
			

-- ERROR:
File "XXXX", line 7
    elif(ced==5):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:04:33) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
ced = int(input("digite a cedula: "))
if (ced == 2):
	print("Animal: Tartaruga")
	elif(ced==5):
		print("Animal: Garca")
	elif(ced == 10):
		print("Animal: Arara")
	elif(ced == 20):
		print("Animal: Mico-leao-dourado")
	elif(ced == 50):
		print("Animal: Onca-pintada")
	elif(ced == 100):
		print("Animal: Garoupa")
else:
	print("animal: invalido")
			
			

-- ERROR:
File "XXXX", line 7
    elif(ced==5):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:04:54) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
ced = int(input("digite a cedula: "))
if (ced == 2):
	print("Animal: Tartaruga")
elif(ced==5):
print("Animal: Garca")
elif(ced == 10):
print("Animal: Arara")
elif(ced == 20):
print("Animal: Mico-leao-dourado")
elif(ced == 50):
print("Animal: Onca-pintada")
elif(ced == 100):
print("Animal: Garoupa")
else:
	print("animal: invalido")
			
			

-- ERROR:
File "XXXX", line 8
    print("Animal: Garca")
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:05:08) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
ced = int(input("digite a cedula: "))
if (ced == 2):
	print("Animal: Tartaruga")
elif(ced==5):
	print("Animal: Garca")
elif(ced == 10):
	print("Animal: Arara")
elif(ced == 20):
	print("Animal: Mico-leao-dourado")
elif(ced == 50):
	print("Animal: Onca-pintada")
elif(ced == 100):
	print("Animal: Garoupa")
else:
	print("animal: invalido")
			
			

-- OUTPUT:
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 11:05:19) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
ced = int(input("digite a cedula: "))
if (ced == 2):
	print("Animal: Tartaruga")
elif(ced==5):
	print("Animal: Garca")
elif(ced == 10):
	print("Animal: Arara")
elif(ced == 20):
	print("Animal: Mico-leao-dourado")
elif(ced == 50):
	print("Animal: Onca-pintada")
elif(ced == 100):
	print("Animal: Garoupa")
else:
	print("animal: invalido")
			
			

-- EXECUTION TIME:
0.206948
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
animal: invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:05:31) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
ced = int(input("digite a cedula: "))
if (ced == 2):
	print("Animal: Tartaruga")
elif(ced==5):
	print("Animal: Garca")
elif(ced == 10):
	print("Animal: Arara")
elif(ced == 20):
	print("Animal: Mico-leao-dourado")
elif(ced == 50):
	print("Animal: Onca-pintada")
elif(ced == 100):
	print("Animal: Garoupa")
else:
	print("animal: invalido")
			
			

-- OUTPUT:
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:05:35) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
ced = int(input("digite a cedula: "))
if (ced == 2):
	print("Animal: Tartaruga")
elif(ced==5):
	print("Animal: Garca")
elif(ced == 10):
	print("Animal: Arara")
elif(ced == 20):
	print("Animal: Mico-leao-dourado")
elif(ced == 50):
	print("Animal: Onca-pintada")
elif(ced == 100):
	print("Animal: Garoupa")
else:
	print("animal: invalido")
			
			

-- OUTPUT:
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:05:39) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
ced = int(input("digite a cedula: "))
if (ced == 2):
	print("Animal: Tartaruga")
elif(ced==5):
	print("Animal: Garca")
elif(ced == 10):
	print("Animal: Arara")
elif(ced == 20):
	print("Animal: Mico-leao-dourado")
elif(ced == 50):
	print("Animal: Onca-pintada")
elif(ced == 100):
	print("Animal: Garoupa")
else:
	print("animal: invalido")
			
			

-- OUTPUT:
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:05:47) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
ced = int(input("digite a cedula: "))
if (ced == 2):
	print("Animal: Tartaruga")
elif(ced==5):
	print("Animal: Garca")
elif(ced == 10):
	print("Animal: Arara")
elif(ced == 20):
	print("Animal: Mico-leao-dourado")
elif(ced == 50):
	print("Animal: Onca-pintada")
elif(ced == 100):
	print("Animal: Garoupa")
else:
	print("animal: invalido")
			
			

-- OUTPUT:
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:05:50) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
ced = int(input("digite a cedula: "))
if (ced == 2):
	print("Animal: Tartaruga")
elif(ced==5):
	print("Animal: Garca")
elif(ced == 10):
	print("Animal: Arara")
elif(ced == 20):
	print("Animal: Mico-leao-dourado")
elif(ced == 50):
	print("Animal: Onca-pintada")
elif(ced == 100):
	print("Animal: Garoupa")
else:
	print("animal: invalido")
			
			

-- OUTPUT:
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:07:06) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
ced = int(input("digite a cedula: "))
print("Entrada:", ced)
if (ced == 2):
	print("Animal: Tartaruga")
elif(ced==5):
	print("Animal: Garca")
elif(ced == 10):
	print("Animal: Arara")
elif(ced == 20):
	print("Animal: Mico-leao-dourado")
elif(ced == 50):
	print("Animal: Onca-pintada")
elif(ced == 100):
	print("Animal: Garoupa")
else:
	print("animal: invalido")
			
			

-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 11:07:12) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
ced = int(input("digite a cedula: "))
print("Entrada:", ced)
if (ced == 2):
	print("Animal: Tartaruga")
elif(ced==5):
	print("Animal: Garca")
elif(ced == 10):
	print("Animal: Arara")
elif(ced == 20):
	print("Animal: Mico-leao-dourado")
elif(ced == 50):
	print("Animal: Onca-pintada")
elif(ced == 100):
	print("Animal: Garoupa")
else:
	print("animal: invalido")
			
			

-- EXECUTION TIME:
0.173542
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
animal: invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:07:26) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
ced = int(input("digite a cedula: "))
print("Entrada:", ced)
if (ced == 2):
	print("Animal: Tartaruga")
elif(ced==5):
	print("Animal: Garca")
elif(ced == 10):
	print("Animal: Arara")
elif(ced == 20):
	print("Animal: Mico-leao-dourado")
elif(ced == 50):
	print("Animal: Onca-pintada")
elif(ced == 100):
	print("Animal: Garoupa")
else:
	print("animal: invalido")
			
			

-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:08:03) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
ced = int(input("digite a cedula: "))
print("Entrada:", ced)
if (ced == 2):
	print("Animal: Tartaruga")
elif(ced==5):
	print("Animal: Garca")
elif(ced == 10):
	print("Animal: Arara")
elif(ced == 20):
	print("Animal: Mico-leao-dourado")
elif(ced == 50):
	print("Animal: Onca-pintada")
elif(ced == 100):
	print("Animal: Garoupa")
else:
	print("animal: invalido")
			
			

-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 11:08:33) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
ced = int(input("digite a cedula: "))
print("Entrada:", ced)
if (ced == 2):
	print("Animal: Tartaruga")
elif(ced==5):
	print("Animal: Garca")
elif(ced == 10):
	print("Animal: Arara")
elif(ced == 20):
	print("Animal: Mico-leao-dourado")
elif(ced == 50):
	print("Animal: Onca-pintada")
elif(ced == 100):
	print("Animal: Garoupa")
else:
	print("animal: Invalido")
			
			

-- EXECUTION TIME:
0.147722
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 11:09:04) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
ced = int(input("digite a cedula: "))
print("Entrada:", ced)
if (ced == 2):
	print("Animal: Tartaruga")
elif(ced==5):
	print("Animal: Garca")
elif(ced == 10):
	print("Animal: Arara")
elif(ced == 20):
	print("Animal: Mico-leao-dourado")
elif(ced == 50):
	print("Animal: Onca-pintada")
elif(ced == 100):
	print("Animal: Garoupa")
else:
	print("Animal: Invalido")
			
			

-- EXECUTION TIME:
0.171861
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pintada
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
